// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-avatar css-1idiyh9"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-1gtm8iv"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a border 1`] = `
<div
  class="wp-components-avatar css-o3go66"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-1gtm8iv"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-lzmd8z"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-17dwwom"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-ftpcdx"
    />
  </div>
</div>
`;

exports[`props should render with a custom color 1`] = `
<div
  class="wp-components-avatar css-2tsfft"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-fsm96m"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-lzmd8z"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-17dwwom"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-ftpcdx"
    />
  </div>
</div>
`;

exports[`props should render with a custom size 1`] = `
<div
  class="wp-components-avatar css-1m7hgcd"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-1x85lh1"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a custom small size + square 1`] = `
<div
  class="wp-components-avatar css-mw8k5f"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-qulam5"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with a custom xSmall size + square 1`] = `
<div
  class="wp-components-avatar css-1pkhgrq"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-12z0kyb"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with an alternate shape 1`] = `
<div
  class="wp-components-avatar css-56pqwc"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-fsm96m"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-lzmd8z"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-1ihs34p"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-ftpcdx"
    />
  </div>
</div>
`;

exports[`props should render with an alternate size 1`] = `
<div
  class="wp-components-avatar css-150d6gp"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-1x85lh1"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
</div>
`;

exports[`props should render with animateOnImageLoad disabled 1`] = `
<div
  class="wp-components-avatar css-1idiyh9"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-1gtm8iv"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-lzmd8z"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-lhx2nn"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-ftpcdx"
    />
  </div>
</div>
`;

exports[`props should render with image src 1`] = `
<div
  class="wp-components-avatar css-1idiyh9"
  data-g2-c16t="true"
  data-g2-component="Avatar"
>
  <div
    class="wp-components-view css-1qr3s7c"
    data-g2-c16t="true"
    data-g2-component="View"
  >
    <div
      class="wp-components-text wp-components-initials css-1gtm8iv"
      data-g2-c16t="true"
      data-g2-component="AvatarInitials"
    >
      EO
    </div>
  </div>
  <div
    class="wp-components-aspect-ratio css-lzmd8z"
    data-g2-c16t="true"
    data-g2-component="AspectRatio"
  >
    <img
      alt="Elsa Oldenburg"
      class="css-17dwwom"
      data-g2-c16t="true"
      data-g2-component="AvatarImage"
      src="/elsa.png"
    />
    <div
      aria-hidden="true"
      class="css-ftpcdx"
    />
  </div>
</div>
`;
